--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
   "dependencies": {
     "@nuxt/devtools-kit": "^1.6.0",
     "@nuxt/kit": "^3.14.159",
-    "sirv": "^3.0.0"
+    "sirv": "^3.0.0",
+    "@ai-sdk/openai": "^0.0.72",
+    "@ai-sdk/vue": "^0.0.59",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "ai": "^3.4.33",
+    "llamaindex": "^0.8.14",
+    "marked": "^15.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.4",
