--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@obejansen/rubberduck",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A duck to talk code with.",
   "license": "ISC",
   "type": "module",
@@ -29,7 +29,7 @@
     "prepare": "nuxi prepare client",
     "play:dev": "nuxi dev playground",
     "play:prod": "npm run prepack && nuxi dev playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish --public && git push --follow-tags",
+    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch"
